Fixed mobile navbar positioning on smaller screen

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header {
 
   max-width: 100vw;
   background-color: var(--primary-color);
-   height: 10vh;
+  height: 10vh;
 }
 
 a {
@@ -64,12 +64,9 @@ h1 {
   top: 0;
   z-index: 9999;
   height: 10vh;
-/*  background-color: rgba(44, 51, 51, .90);
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);*/
 }
 
-*/.nav-logo {
+.nav-logo {
   grid-column: 1;
 }
 
@@ -179,12 +176,11 @@ h1 {
 
     border: none;
 
-    top: 1.8rem;
+    top: 1.5rem;
     right: 2.5rem;
     z-index: 10000;
 
     transition: 250ms ease-in-out;
-/*    margin-top: .70em;*/
   }
 }
 
